Fri Mar 13 17:54:04 1998  Michael Meissner  <meissner@cygnus.com>

        * gcc.c (DIR_UP): If not defined, define as "..".
        (standard_bindir_prefix): New static, holds target location to
        install binaries.
        (split_directories): New function to split a filename into
        component directories.
        (free_split_directories): New function, release memory allocated
        by split_directories.
        (make_relative_prefix): New function, make a relative pathname if
        the compiler is not in the expected location.
        (process_command): Use GET_ENVIRONMENT to read GCC_EXEC_PREFIX.
        If GCC_EXEC_PREFIX was not specified, see if we can figure out an
        appropriate prefix from argv[0].

        * Makefile.in (gcc.o): Define STANDARD_BINDIR_PREFIX.

Wed Aug 12 18:18:16 1998  Mumit Khan  <khan@xraylith.wisc.edu>

        * i386/winnt.c (i386_pe_dllexport_p): Check TREE_TYPE for
        attributes as well for C++ class members.
        (i386_pe_dllimport_p): Likewise.

Thu Sep 12 17:51:24 1996  Jim Wilson  <wilson@cygnus.com>

        * Makefile.in (cccp.o, cpplib.o): Change GPLUSPLUS_INCLUDE_DIR to use
        libsubdir/unlibsubdir.

Tue Oct 31 16:52:51 1995  Jim Wilson  <wilson@chestnut.cygnus.com>

        * Makefile.in (cccp.o): Move CROSS_INCLUDE_DIR from libsubdir to
        tooldir.
        (cpplib.o, stamp-proto): Likewise.

Mon May 10 09:11:23 1993  Ian Lance Taylor  (ian@cygnus.com)

        * Makefile.in (cccp.o): Use $(libsubdir)/$(unlibsubdir) for
        LOCAL_INCLUDE_DIR, so that a native compiler can find assert.h via
        GCC_EXEC_PREFIX.

Fri May  7 09:16:10 1993  Ian Lance Taylor  (ian@cygnus.com)

        * Makefile.in (gcc.o): Pass STANDARD_STARTFILE_PREFIX as
        $(unlibsubdir) rather than $(libdir) so that native compilations can
        find $(libdir).

Fri Aug 28 19:19:31 1998  Mumit Khan  <khan@xraylith.wisc.edu>

        * i386/cygwin32.h (ASM_OUTPUT_SECTION_NAME): Don't emit